--- a/plugin_template/localizations/commnext_localizations.csv
+++ b/plugin_template/localizations/commnext_localizations.csv
@@ -1,4 +1,4 @@
 Key,Type,Desc,English,Italian,German,French,Spanish,Japanese,Korean,Polish,Russian,Chinese (Simplified),Portuguese (Brazil),Chinese (Traditional)
-PartModules/NextRelay/Band,Text,,Band,Banda,,,,,,,,,,
-PartModules/NextRelay/Name,Text,,Signal Relay,Ripetitore di Segnale,,,,,,,,,,
-PartModules/NextRelay/RelayDescription,Text,,This antenna behaves as a relay,,,,,,,,,,,
+PartModules/NextRelay/Band,Text,,Band,Banda,,,,,,,,频段,,
+PartModules/NextRelay/Name,Text,,Signal Relay,Ripetitore di Segnale,,,,,,,,信号中继,,
+PartModules/NextRelay/RelayDescription,Text,,This antenna behaves as a relay,,,,,,,,,这款天线能够中继信号,,
